--- a/static/css/events.css
+++ b/static/css/events.css
@@ -17,6 +17,7 @@
   max-width: 1200px;
   flex-wrap: wrap;
   padding: 40px 0%;
+  padding-bottom:0;
 }
 .containerevent .card {
   position: relative;
