--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -152,7 +152,6 @@ section {
   text-align: left;
   font: normal 16px "Open Sans", cursive;
   padding: 25px 20px;
-  margin-top: 50px;
 }
 
 .footer-distributed .footer-left,
