--- a/static/css/team.css
+++ b/static/css/team.css
@@ -177,7 +177,7 @@
     width: 100%;
     margin: auto;
     overflow: visible;
-    margin-top: 30%;
+    
   }
   
 }
